--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div >
-<nav class="navbar navbar-expand-sm bg-light justify-content-center mt-2">
+<nav class="navbar navbar-expand-sm bg-light justify-content-center mt-2 pt-3">
   <ul class="navbar-nav">
     <li class="nav-item p-2">
       <a class="nav-link homenav font1" href="products/all" >All</a>
@@ -8,10 +8,10 @@
       <a class="nav-link homenav font1" href="products/clothing" >Clothing</a>
     </li>
     <li class="nav-item p-2">
-      <a class="nav-link p-2 homenav font1"   href="products/footwear">Electronics</a>
+      <a class="nav-link p-2 homenav font1"   href="products/electronics">Electronics</a>
     </li>
     <li class="nav-item p-2">
-      <a class="nav-link homenav font1"  routerLink="products/elctronics" >Footwear</a>
+      <a class="nav-link homenav font1"  routerLink="products/footwear" >Footwear</a>
     </li>
     <li class="nav-item p-2">
       <a class="nav-link homenav font1"  routerLink="products/books" >Books</a>
@@ -36,10 +36,10 @@
       <img src="../../assets/pos2.jpg" alt="Clothes" width="100%" height="450">
     </div>
     <div class="carousel-item">
-      <img src="../../assets/pos2.jpg"  width="100%" height="500">
+      <img src="../../assets/pos2.jpg"  width="100%" height="450">
     </div>
     <div class="carousel-item">
-      <img src="ny.jpg"  width="1100" height="500">
+      <img src="../../assets/pos3.jpg"  width="100%" height="450">
     </div>
   </div>
 
@@ -67,10 +67,10 @@
       <img src="../../assets/t2.jpg" alt="Clothes" width="100%" height="450">
     </div>
     <div class="carousel-item">
-      <img src="../../assets/pos2.jpg" alt="Chicago" width="100%" height="500">
+      <img src="../../assets/pos2.jpg" width="100%" height="500">
     </div>
     <div class="carousel-item">
-      <img src="ny.jpg" alt="New York" width="1100" height="500">
+      <img src="../../assets/pos3.jpg"  width="1100" height="500">
     </div>
   </div>
 
@@ -95,7 +95,7 @@
         <div class="card-body">
           <h5 class="card-title">Buy Trending Clothes</h5>
           <p class="card-text">Life is too short to wear Boring clothes. Explore a wide range of awesome clothes here !</p>
-          <button class="btn btn-outline-danger"> Explore !</button>
+          <a href="products/clothing" class="btn btn-outline-danger"> Explore !</a>
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
         <div class="card-body">
           <h5 class="card-title">Electronics and Gadgets</h5>
           <p class="card-text">Be fascinated with the electronic devices that you can mess around with!Explore a wide range of great gadgets here !</p>
-          <button class="btn btn-outline-primary " > Explore !</button>
+          <a href="products/electronics" class="btn btn-outline-primary " > Explore !</a>
         </div>
       </div>
     </div>
@@ -132,7 +132,7 @@
           <p class="card-text">
             Good Shoes take you to good places!!
           Take the road less travelled but first get some FANCY SHOES</p>
-          <button class="btn btn-outline-success " > Explore !</button>
+          <a href="products/footwear" class="btn btn-outline-success " > Explore !</a>
         </div>
       </div>
     </div>
@@ -147,8 +147,8 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Explore Books</h5>
-          <p class="card-text">We loose ourselves in books , we find ourselves there too!! Ecplore the latest bestsellers!</p>
-          <button class="btn btn-outline-warning " > Explore !</button>
+          <p class="card-text">We loose ourselves in books , we find ourselves there too!! Explore the latest bestsellers!</p>
+          <a href="products/books" class="btn btn-outline-warning " href="products/books"> Explore !</a>
         </div>
       </div>
     </div>
@@ -164,25 +164,25 @@
   <div class="d-flex justify-content-center">
 
   <div class="m-2">
-    <a href="#"><img src="../../assets/brand2.jfif"></a>
+    <a href="products/clothing"><img src="../../assets/brand2.jfif"></a>
   </div>
   <div class="m-2">
-    <a href="#"><img src="../../assets/brand3.jfif"></a>
+    <a href="products/clothing"><img src="../../assets/brand3.jfif"></a>
   </div>
   <div class="m-2">
-    <a href="#"><img src="../../assets/brand4.jfif"></a>
+    <a href="products/clothing"><img src="../../assets/brand4.jfif"></a>
   </div>
   </div>
   <div class="d-flex justify-content-center">
 
     <div class="m-2">
-      <a href="#"><img src="../../assets/brand1.jfif"></a>
+      <a href="products/clothing"><img src="../../assets/brand1.jfif"></a>
     </div>
     <div class="m-2">
-      <a href="#"><img src="../../assets/brand5.jfif"></a>
+      <a href="products/clothing"><img src="../../assets/brand5.jfif"></a>
     </div>
     <div class="m-2">
-      <a href="#"><img src="../../assets/brand6.jfif"></a>
+      <a href="products/clothing"><img src="../../assets/brand6.jfif"></a>
     </div>
   </div>
   </div>
