--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,15 @@
 <div style="height:40px;">
-<nav class="navbar navbar-expand  color1 navbar-light fixed-top pb-2" >
+<nav class="navbar navbar-expand-lg  color1 navbar-light fixed-top pb-2" >
 
-  <ul class="navbar-nav " style="float: left;">
+  <ul class="navbar-nav navbar-expand-lg " style="float: left;">
     <li class="nav-item">
       <a class="navbar-brand font1 " href="home" style=" font-size:20px;">Shopping Bee</a>
     </li>
     <li class="nav-item">
 
         <form class="form-inline" action="/action_page.php">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-success font1" type="submit">Search</button>
+          <input class="form-control mr-sm-2 " type="text" placeholder="Search" [(ngModel)]="searchedItem" name="searchedItem">
+          <button class="btn btn-success font1" type="submit" (click)="searchOnClick()"  >Search</button>
         </form>
 
 
@@ -17,7 +17,7 @@
   </ul>
 
 
-  <ul class="navbar-nav ml-auto ">
+  <ul class="navbar-nav navbar-expand-lg ml-auto ">
     <li class="nav-item pr-3">
       <a class="nav-link font1" href="login"><i class="fa fa-user p-1" style="font-size:20px;"></i>Login/Signup</a>
       <ul class="dropdown">
@@ -38,6 +38,9 @@
     </li>
     <li class="nav-item pr-3">
       <a class="nav-link font1" href="orderHistory" *ngIf="loginService.isUserLoggedIn()"><i class="fa p-1" style="font-size:20px;">&#xf1da;&nbsp;</i>Order History</a>
+    </li>
+    <li class="nav-item pr-3" *ngIf="loginService.isUserLoggedIn() && this.role=='Admin'">
+      <a class="nav-link font1" href="addProduct"><i class="fa p-1" style="font-size:20px;">&#xf067;&nbsp;</i>Add Product</a>
     </li>
   </ul>
 </nav>
