--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -84,7 +84,7 @@
 
   <h2 class="font1 p-5 text-center">Create Your account</h2>
   <p class="divider-text">
-            <span class="bg-light">Lets Go</span>
+            <span class="bg-light">CREATE FREE!</span>
         </p>
 
   <!--Form-->
@@ -96,27 +96,27 @@
       <div class="form-group">
         <input type="text" class="form-control" id="name" placeholder="Your Name" name="name" [(ngModel)]="user.name" required>
         <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <div class="invalid-feedback">Required.</div>
       </div>
       <div class="form-group">
-        <input type="email" class="form-control" id="uname" placeholder="Your Email Address" name="email" [(ngModel)]="user.email" required>
+        <input type="email" class="form-control" id="uname" placeholder="Email Address" name="email" [(ngModel)]="user.email" required>
         <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <div class="invalid-feedback">Required.</div>
       </div>
       <div class="form-group">
         <input type="password" class="form-control" id="pwd" placeholder="Choose Password" name="pswd" [(ngModel)]="user.password" required>
         <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <div class="invalid-feedback">Required.</div>
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" id="number" placeholder="Mobile Number(for order status update)" name="mob" [(ngModel)]="user.mobileNo" required>
+        <input type="text" class="form-control" id="number" placeholder="Contact Number" name="mob" [(ngModel)]="user.mobileNo" required>
         <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <div class="invalid-feedback">Required.</div>
       </div>
       <div class="form-group">
         <input type="text" class="form-control" id="address" placeholder="Enter Your Address" name="pswd" [(ngModel)]="user.address" required>
         <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <div class="invalid-feedback">Required.</div>
       </div>
       <b class="ml-1 font-weight-lighter">Gender: </b>&nbsp;
       <div class="form-group">
