--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="mt-4 d-flex container" style="text-align: center;">
 
   <div class="m-4 p-2" style="border: 1px solid lightgrey;">
