--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -80,6 +80,7 @@
 <!--&lt;!&ndash;container end.//&ndash;&gt;-->
 
 <!--</div>-->
+<app-nav-bar></app-nav-bar>
 <div class="bg-white">
 
   <h2 class="font1 p-5 text-center">Create Your account</h2>
