--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div >
 <nav class="navbar navbar-expand-sm bg-light justify-content-center mt-2 pt-3">
   <ul class="navbar-nav">
