--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,4 @@
+
 <div style="height:40px;">
 <nav class="navbar navbar-expand-lg  color1 navbar-light fixed-top pb-2" >
 
@@ -8,7 +9,7 @@
     <li class="nav-item">
 
         <form class="form-inline" action="/action_page.php">
-          <input class="form-control mr-sm-2 " type="text" placeholder="Search" [(ngModel)]="searchedItem" name="searchedItem">
+          <input class="form-control mr-sm-2 " type="text" placeholder="Search" [(ngModel)]="searchedItem" [ngModelOptions]="{standalone:true}" >
           <button class="btn btn-success font1" type="submit" (click)="searchOnClick()"  >Search</button>
         </form>
 
@@ -18,7 +19,7 @@
 
 
   <ul class="navbar-nav navbar-expand-lg ml-auto ">
-    <li class="nav-item pr-3">
+    <li class="nav-item pr-3" *ngIf="!loginService.isUserLoggedIn()">
       <a class="nav-link font1" href="login"><i class="fa fa-user p-1" style="font-size:20px;"></i>Login/Signup</a>
       <ul class="dropdown">
         <li><a href="login"  class="font1">Login</a></li>
