--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar (childEvent)="this.products=$event"></app-nav-bar>
 <div class="container-fluid mt-5 d-flex">
 <div style="width:20% ; border-right:1px solid lightgrey;border-top:1px solid lightgrey;" >
 <p class="text-muted font1 mt-2 bgcolor " style="text-align: center; font-size:20px;">Filters</p>
